# egwalker-paper

./: .gitignore  Makefile  Makefile_anon  README.md  README_anon.md  acmart.cls  all_charts.typ  charts.typ  charts_old.typ  collect.js  datasets-table.js  eg-walker.tex  pseudocode.txt  reg-text.typ  results  step0-clean.sh  step1-prepare.sh  step2a-memusage.sh  step2b-benchmarks.sh  works.bib  works.yml
_minted-eg-walker/: EE04E22BBB42B5220891A420913D3763AC7DB62213A629F77CEA899A92767C3A.pygtex  listing1.pygtex  listing2.pygtex
datasets/: A1-uncompressed.am  A1.am  A1.json  A1.yjs  A2-uncompressed.am  A2.am  A2.json  A2.yjs  C1-uncompressed.am  C1.am  C1.yjs  C2-uncompressed.am  C2.am  C2.yjs  README.md  S1-uncompressed.am  S1.am  S1.json  S1.yjs  S2-uncompressed.am  S2.am  S2.json  S2.yjs  S3-uncompressed.am  S3.am  S3.json  S3.yjs  conv.sh  make_dup_data.sh
datasets/old/: automerge-paperx3-uncompressed.am  automerge-paperx3.am  automerge-paperx3.json  automerge-paperx3.yjs  clownschoolx25-uncompressed.am  clownschoolx25.am  clownschoolx25.yjs  egwalkerx1-uncompressed.am  egwalkerx1.am  egwalkerx1.yjs  friendsforeverx25.dt  friendsforeverx25.yjs  git-makefilex2.json  node_nodeccx1-uncompressed.am  node_nodeccx1.am  node_nodeccx1.json  node_nodeccx1.yjs  seph-blog1x3-uncompressed.am  seph-blog1x3.am  seph-blog1x3.json  seph-blog1x3.yjs
datasets/old2/: S3.json
datasets/slow-am/: friendsforeverx25-uncompressed.am  friendsforeverx25.am
datasets/xxx/: a
diagrams/: dataflow-eg.monopic  dataflow.monopic
feathertail-reference/: README.md  package.json
feathertail-reference/test/: test.ts
results/: README.md  automerge_memusage.json  dataset_stats.json  dataset_stats.tex  dt_memusage.json  dtcrdt_memusage.json  filesizes.json  js.json  numpatches.json  ot_memusage.json  stats_friendsforever.json  stats_node_nodecc.json  stats_seph-blog1.json  timings.json  xf-clownschool-ff.json  xf-clownschool-noff.json  xf-friendsforever-ff.json  xf-friendsforever-noff.json  xf-git-makefile-ff.json  xf-git-makefile-noff.json  xf-node_nodecc-ff.json  xf-node_nodecc-noff.json  yjs_am_sizes.json  yjs_memusage.json  yrs_memusage.json
results/old/: filesizes.json  stats_automerge-paper.json  stats_clownschool.json  stats_egwalker.json  stats_git-makefile.json
svg-plot/: package-lock.json  package.json  render.js
tools/: README.md
tools/bench-yjs/: bench-local.js  bench-memusage.js  bench-remote.js  bench.js  package-lock.json  package.json  report.json
tools/crdt-converter/: Cargo.toml  README.md  bench.sh  test.json
tools/crdt-converter/src/: main.rs
tools/diamond-types/: Cargo.toml  INTERNALS.md  README.md
tools/diamond-types/crates/bench/src/: main.rs
tools/diamond-types/crates/content-tree/: Cargo.toml  README.md
tools/diamond-types/crates/crdt-testdata/: Cargo.toml
tools/diamond-types/crates/crdt-testdata/src/: lib.rs
tools/diamond-types/crates/diamond-core-old/src/: lib.rs
tools/diamond-types/crates/diamond-types-crdt/: Cargo.toml
tools/diamond-types/crates/dt-cli/: Cargo.toml
tools/diamond-types/crates/dt-cli/src/: export.rs  main.rs
tools/diamond-types/crates/paper-stats/: Cargo.toml  README.md
tools/diamond-types/crates/paper-stats/src/: main.rs
tools/diamond-types/crates/rle/: Cargo.toml  README.md
tools/diamond-types/crates/run_on_old/: Cargo.toml
tools/diamond-types/crates/run_on_old/src/: main.rs
tools/diamond-types/src/: dtrange.rs
tools/diamond-types/src/causalgraph/: storage.rs
tools/diamond-types/src/list/: merge.rs  mod.rs  op_metrics.rs  oplog.rs
tools/diamond-types/src/list/encoding/: README.md
tools/diamond-types/src/listmerge/: merge.rs  mod.rs  to_old.rs
tools/ot-bench/: Cargo.toml  bench.sh
tools/ot-bench/src/: cg.rs  frontier.rs  main.rs  ot_text.rs  ot_text_tp2.rs
tools/paper-benchmarks/: Cargo.toml  bench.sh  raw_posstats.txt
tools/paper-benchmarks/src/: benchmarks.rs  convert1.rs  convert2.rs  ff_bench.rs  main.rs
