[package]
name = "ot-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
jumprope = { version = "1.1.2", features = ["buffered"]}
smallvec = { version = "1.13.1", features = ["serde"]}
smartstring = { version = "1.0.1", features = ["serde"] }
#ot-text = { path = "../../../textot.rs" }
str_indices = "0.4.3"
criterion = { version = "0.5.1", features = [], optional = true }
rustc-hash = "1.1.0"
trace-alloc = { path = "../diamond-types/crates/trace-alloc", optional = true }

[features]
memusage = ["trace-alloc", "trace-alloc/memusage"]
bench = ["dep:criterion"]

[profile.release]
#debug = true
lto = true
codegen-units = 1

# This lets me compile a memusage target to a different directory.
[profile.memusage]
inherits = "release"
