[package]
name = "paper-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"
yrs = "0.16.10"
#cola = { version = "0.1.1", features = ["encode"] }
#cola-nocursor = { path = "../../../../3rdparty/cola", package = "cola" }
criterion = { version = "0.5.1", optional = true }
crdt-testdata = { path = "../../../diamond-types/crates/crdt-testdata" }
diamond-types-crdt = { path = "../../../diamond-types/crates/diamond-types-crdt" }
diamond-types = { path = "../../../diamond-types" }
jumprope = { version = "1.1.2", features = ["buffered"] }
trace-alloc = { path = "../../../diamond-types/crates/trace-alloc" }
serde = "1.0.190"
serde_json = "1.0.107"
rand = "0.8.5"
smallvec = { version = "1.11.1", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }

[features]
memusage = ["trace-alloc/memusage"]
bench = ["dep:criterion"]

[profile.bench]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 3
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
#rustflags = ["-C target-cpu=native"]
