[package]
name = "paper-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
trace-alloc = { path = "../trace-alloc" }
diamond-types = { path = "../..", features = ["serde"] }
humansize = "2.1.3"
jumprope = "1.1.2"
crdt-testdata = { path = "../crdt-testdata" }

[features]
memusage = ["trace-alloc/memusage"]